# insernshipproject

./: .gitignore  .replit  INTEGRATION_ANALYSIS.md  INTEGRATION_ANALYSIS_SUMMARY.md  TEST_SEED_DATA.md  TEST_USERS.md  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  readme.md  report.md  seed_db.py
.agents/memory/: MEMORY.md  api-endpoint-map.md  backend-layout.md  did-model-fields.md  django-settings.md  federated-member-service.md  holder-frontend.md  issuer-integration.md  mobile-api-paths.md  model-migration-drift.md  nid-simulation.md  test-users.md  token-blacklist.md
attached_assets/: Pasted--Digital-Credential-Wallet-Platform-Backend-Audit-and-I_1782137711292.txt  Pasted--Frontend-and-Mobile-Integration-Agent-Prompt-Objective_1782139584773.txt
backend/: .env.example  ISSUER_INTEGRATION_TEST_REPORT.md  PHASE_10_11_12_IMPLEMENTATION.md  PHASE_10_11_12_SUMMARY.md  PHASE_10_11_12_VERIFICATION_CHECKLIST.md  fix_test_issued_at.py
backend/celery_tasks/: __init__.py  (+3 more)
docs/: API_INTEGRATION_INVENTORY.md  API_SOURCE_OF_TRUTH.md  ISSUER_CREDENTIAL_ISSUANCE_FLOW.md  ISSUER_NOTIFICATION_FLOW_ANALYSIS.md  PROJECT_COMPLETE_FLOWS.md  README.md  SRS.md  portal-flows.md
frontend/: .env.example  .eslintrc.cjs  .gitignore  bundle-stats.html  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
mobile/: app.json  metro.config.js  package-lock.json  package.json  tsconfig.json
mock_org_api/: .env.example  README.md  members.json  package-lock.json  package.json  server.js
(+512 files in other folders)
