[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "base58==2.1.1",
    "celery==5.6.3",
    "cryptography==43.0.1",
    "dj-database-url==2.2.0",
    "django==5.2.15",
    "django-cleanup==9.0.0",
    "django-cors-headers==4.9.0",
    "django-redis==5.4.0",
    "djangorestframework==3.17.1",
    "djangorestframework-simplejwt==5.5.1",
    "drf-spectacular>=0.29.0",
    "gunicorn==23.0.0",
    "httpx==0.28.1",
    "pillow==11.3.0",
    "psycopg2-binary==2.9.12",
    "pynacl>=1.6.2",
    "pyotp>=2.10.0",
    "python-decouple==3.8",
    "python-dotenv>=1.2.2",
    "qrcode[pil]==8.0",
    "redis==6.4.0",
    "requests>=2.34.2",
    "whitenoise==6.12.0",
]
